[tool.poetry]
name = "bench_files_fastapi"
version = "0.1.0"
description = ""
authors = ["Kapustin Alexander <akapustin@ambrahealth.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.65.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
